add font and reduce title size

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <meta name="theme-color" content="#000000">
 
   <script src="https://use.fontawesome.com/dae5e3c970.js"></script>
-
+  <!-- <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Archivo+Narrow|Cantata+One|Comfortaa|EB+Garamond|Hind+Siliguri|IBM+Plex+Serif|Old+Standard+TT|Passion+One|Pragati+Narrow|Questrial|Source+Serif+Pro|Vidaloka"
+    rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
